# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-24 15:44:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57

    Summary:
      web, fix not-found errors (#196)
    Revision:
      itools--main--0.12--patch-57


    modified files:
     Changelog web/server.py


2005-11-22 15:52:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-56

    Summary:
      cms, register the handler for XML documents with 'application/xml' too
    Revision:
      itools--main--0.12--patch-56


    modified files:
     Changelog cms/Handler.py cms/html.py


2005-11-22 13:57:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-55

    Summary:
      scripts.icms, fix for itools.cms based applications
    Revision:
      itools--main--0.12--patch-55

    Example, if an application based in itools.cms is called "my_app", this
    code must work:
    
      >>> from itools.cms.Root import Root
      >>> import my_app
      >>> isinstance(my_app.Root, Root)
      True
    
    Then the instance will be created with:
    
      $ icms.py init --root=my_app my_app
    
    
    The recommended way to do this is to have a Python package with the files:
    
      my_app/
        __init__.py
        base.py
        root.py
        setup.py
    
    Where:
    
    __init__.py:
    
      from root import Root
    
    base.py:
    
      from itools.cms.Handler import Handler as iHandler
    
      class Handler(iHandler):
          pass
    
    root.py:
    
      from itools.cms.Root import Root as iRoot
      form base import Handler
    
      class Root(Handler, iRoot):
         class_id = 'my_app'
    
      Handler.register_handler_class(Root)

    modified files:
     Changelog scripts/icms.py


2005-11-21 20:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-54

    Summary:
      web, fixing when behind Apache (the REAL_PATH)
    Revision:
      itools--main--0.12--patch-54

