@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-24 16:05:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58
+
+    Summary:
+      web, implement "Host:" request header (#189)
+    Revision:
+      itools--main--0.12--patch-58
+
+
+    modified files:
+     Changelog web/context.py web/server.py
+
+
 2005-11-24 15:44:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57
 
     Summary:
